# banking-backend-exam

./: .gitignore  Makefile  README.md  requirements.txt
banking_project/: pyproject.toml
banking_project/banking_system/banking_app/: admin.py  models.py  serializers.py  urls.py  utils.py  views.py
banking_project/banking_system/banking_system/: settings.py  urls.py  wsgi.py
