[tool.poetry]
name = "banking-project"
version = "0.1.0"
description = ""
authors = ["Angelo Lamparas <chadlamparas@gmail.com>"]
readme = "README.md"
packages = [{include = "banking_project"}]

[tool.poetry.dependencies]
python = "^3.10"
Django = "^5.0.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
